--- a/Wakawaka/Wakawaka.csproj
+++ b/Wakawaka/Wakawaka.csproj
@@ -41,11 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Event.cs" />
+    <Compile Include="Field.cs" />
     <Compile Include="ID.cs" />
     <Compile Include="Member.cs" />
+    <Compile Include="Method.cs" />
+    <Compile Include="Property.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="Type.cs" />
-    <Compile Include="ConversionExtensions.cs" />
+    <Compile Include="Markdown.cs" />
     <Compile Include="XmlDocumentation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
