--- a/Wakawaka/Wakawaka.csproj
+++ b/Wakawaka/Wakawaka.csproj
@@ -41,14 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Event.cs" />
-    <Compile Include="Field.cs" />
+    <Compile Include="Documentation\Event.cs" />
+    <Compile Include="Documentation\Field.cs" />
     <Compile Include="ID.cs" />
-    <Compile Include="Member.cs" />
-    <Compile Include="Method.cs" />
-    <Compile Include="Property.cs" />
+    <Compile Include="Documentation\Member.cs" />
+    <Compile Include="Documentation\Method.cs" />
+    <Compile Include="Documentation\Property.cs" />
     <Compile Include="StringExtensions.cs" />
-    <Compile Include="Type.cs" />
+    <Compile Include="Documentation\Type.cs" />
     <Compile Include="Markdown.cs" />
     <Compile Include="XmlDocumentation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
