Add <param> tag support and HTML encoding
- Change name to short name and display namespace after summary;
- Change cref from autolink to normal link.

--- a/Wakawaka/Wakawaka.csproj
+++ b/Wakawaka/Wakawaka.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Documentation\Tags\CodeTag.cs" />
     <Compile Include="Documentation\Tags\CTag.cs" />
     <Compile Include="Documentation\Tags\ParamRefTag.cs" />
+    <Compile Include="Documentation\Tags\ParamTag.cs" />
     <Compile Include="Documentation\Tags\ParaTag.cs" />
     <Compile Include="Documentation\Tags\SeeTag.cs" />
     <Compile Include="Documentation\Tags\Tag.cs" />
