Add <exception> tag support
- Revert back to ID.FullName file names so links mostly work;
- Split Member.Render into Render and RenderHeader for better control
over positioning;
- Let the ID class itself render the link.

--- a/Wakawaka/Wakawaka.csproj
+++ b/Wakawaka/Wakawaka.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Documentation\Field.cs" />
     <Compile Include="Documentation\Tags\CodeTag.cs" />
     <Compile Include="Documentation\Tags\CTag.cs" />
+    <Compile Include="Documentation\Tags\ExceptionTag.cs" />
     <Compile Include="Documentation\Tags\ParamRefTag.cs" />
     <Compile Include="Documentation\Tags\ParamTag.cs" />
     <Compile Include="Documentation\Tags\ParaTag.cs" />
