--- a/Wakawaka.App/Wakawaka.App.csproj
+++ b/Wakawaka.App/Wakawaka.App.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Wiki.cs" />
+    <Compile Include="WikiSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
